--- a/main.css
+++ b/main.css
@@ -1,6 +1,83 @@
 body {
-    font-family: sans-serif;
-    font-size: 14px;
+    font-family: "Poppins", "Helvetica", sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.7em;
+    color: #555;
+    background: white;
+    -webkit-font-smoothing: antialiased;
+    margin: 0;
+    padding: 0;    
+}
+
+main {
+	width: 90%;
+	margin: auto;
+}
+
+h1,
+h2,
+h3 {
+    font-family: "Poppins", "Helvetica", sans-serif;
+    font-weight: 600;
+    letter-spacing: 0.1em;
+}
+h1 {
+    font-size: 1.8em;
+    font-weight: 700;
+    margin-top: 2em;
+}
+
+p {
+    font-family: "Roboto Slab", serif;
+    font-weight: 400;
+    font-size: 1.2em;
+}
+
+a {
+    color: #42CAFD;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+a:hover {
+    color: #F80;
+}
+
+section {
+    text-align: center;
+    margin: 0em;
+    padding: 3em 1.5em 2em 1.5em;
+
+}
+section h1 {
+    text-transform: uppercase;
+    line-height: 1.4em;
+}
+
+section a {
+    color: #30BEF2;
+    /*border-bottom: 1px dotted #42CAFD;*/
+}
+section a:hover {
+    color: #F80;
+    border-bottom: 2px solid #F80;
+}
+
+article {
+    text-align: justify;
+    margin-bottom: 4em;
+    clear: left;
+}
+/*?? Why? I set the body color to this.*/
+article h2 {
+    color: #FFFFF3;
+}
+
+section ul {
+    font-family: "Roboto Slab", serif;
+    font-weight: 400;
+    font-size: 1.2em;
 }
 
 button {
@@ -37,15 +114,32 @@ svg {
     text-align: center;
 }
 
+.question {
+	font-weight: 400;
+}
+
+.answer {
+    width: 90%;
+    margin: 1.5em 0;
+    padding: 1em 1.5em;
+    background: #F9F9F9;
+    border-left: 0.5em solid #42CAFD;
+}
+
+.interface {
+    margin: 0 3em 0 2em;
+    width: 90%;
+    display: block;
+}
+
 .chart {
     margin: 2em auto;
     display: block;
 }
 
-.interface {
-    margin: 2em 2em 0 2em;
-    width: 90%;
-    display: block;
+.chart-title {
+	text-align: center;
+	margin-right: 3em;
 }
 
 .axis path,
@@ -61,4 +155,58 @@ svg {
 
 .axis-label {
 	font-size: 1.2em;
+}
+
+
+
+
+
+
+
+
+
+/*-- LANDSCAPE PHONE , TABLET (AND UP) MEDIA QUERIES --*/
+
+@media (min-width: 48em) {
+
+    body {
+        font-size: 16px;
+    }
+    section {
+        margin: 0;
+        padding: 0 8% 5% 8%;
+    }
+
+}
+
+@media (min-width: 52em) {
+
+    body {
+        font-size: 17px;
+    }
+
+}    
+
+
+/*-- DESKTOP (AND UP) MEDIA QUERIES --*/
+
+@media (min-width: 68em) {
+
+    section {
+        margin: 0;
+        padding: 0 10% 5% 10%;
+    }
+
+}
+
+@media (min-width: 78em) {
+
+    body {
+        font-size: 18px;
+    }
+    section {
+        margin: 0;
+        padding: 0 12% 5% 12%;
+    }
+
 }
